# match-predictor

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: health.py  schemas.py
app/core/: config.py  database.py
app/ingestion/: classification.py  dto.py  odds_pipeline.py  pipeline.py  resolver.py  run.py
app/model/: annex_c.py  backtest_1x2.py  elo.py  elo_engine.py  explain.py  fit_1x2.py  futures_signals.py  group_utils.py  health_status.py  montecarlo.py  odds_queries.py  parlay.py  parlay_service.py  predict_1x2.py  probabilities.py  ratings.py  run_1x2.py  run_elo.py  run_futures.py  run_settle.py  settle.py  signals.py  standings.py
app/models/: __init__.py  base.py  betting.py  (+10 more)
caddy/: Caddyfile
docs/: deploy.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: env.py
openspec/: config.yaml
scripts/: backfill_kind.py  backup.sh  dedup.py  migrate_data.sh  seed_groups.py  tournament_update.sh
tests/: conftest.py  test_baseline.py  test_classification.py  test_elo.py  test_enum_round_trip.py  test_futures_jobs.py  test_gate_integration.py  test_health_full_router.py  test_health_status.py  test_model_version.py  test_odds_api_redaction.py  test_odds_persist.py  test_odds_relink.py  test_outcome_code.py  test_predict_integration.py  test_prediction_line.py  test_probabilities.py  test_resolver.py  test_signals_pure.py  test_sync_log_capture.py  test_upsert.py
(+255 files in other folders)
