[project]
name = "match-predictor"
version = "0.1.0"
description = "Sistema de predicción +EV para apuestas de fútbol de selecciones (Mundial 2026)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "alembic>=1.14",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "numpy>=1.26",
    "scipy>=1.14",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Las migraciones son auto-generadas por Alembic; E501/I001 son esperables.
"migrations/versions/*.py" = ["E501", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
